Fixed styling of community metrics on mobile

--- a/react-app/src/components/CityCards/CommunityMetrics/CommunityMetrics.css
+++ b/react-app/src/components/CityCards/CommunityMetrics/CommunityMetrics.css
@@ -10,6 +10,7 @@
 .card.metric{
     margin: 10px 10px 10px 10px !important;
     max-width:300px !important;
+    min-width:200px !important;
     color:white !important;
 }
 
